--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -111,24 +111,24 @@
                         </a> - All rights reserved.
       </li>
  </ul>
- <ul class="col-lg-7 copy-links">     
-     <li class="col pl-1 text-center">
+ <ul class="col-lg-7 col copy-links">     
+     <li class="pl-1 text-left">
         <a href="/resources/sitemap">Sitemap</a>
     </li>     
-<li class="col pl-1 text-center">
+<li class="pl-1 text-left">
         <a href="https://status.everpayinc.com/preferences.html">Status</a>
     </li> 
-<li class="col pl-1 text-center">
+<li class="pl-1 text-left">
         <a href="/legal/termsofservice">Terms of Use</a>
 </li>
-<li class="col pl-1 text-center">
+<li class="pl-1 text-left">
         <a href="/legal/privacypolicy">Privacy Policy</a>
 </li>
-<li class="col pl-1 text-center">
+<li class="pl-1 text-left">
         <a href="/legal/cookie-notification">Cookie Notification</a>
 </li>  
-  <li class="col pl-1 text-center">
-        <a href="https://www.elektropay.io">Powered by Elektropay</a>
+  <li class="pl-1 text-center">
+   <a href="https://www.elektropay.io"><span>Powered by</span> <span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png" width="60"> </span> </a>
 </li>  
 </ul>                
 </div>
