--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                         <span class="clearfix"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One platform. Infinite solutions.</span>
                         <p class="mt-3">
-                            All the components included in Everpay are built to the same level.
+                            All First Atlantic Commerce (FAC) is a leading global, online payment solutions provider that specializes in innovative payment technologies.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
                         </p>
                     </div>
                 </div>
