--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
                 <div class="col-lg-5">
                     <div class="col">
                         <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png">
-                        <span class="clearfix"></span>
+                        <span class="clearfix mt-2"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One platform. Infinite solutions.</span>
                         <p class="mt-3">
-                            All First Atlantic Commerce (FAC) is a leading global, online payment solutions provider that specializes in innovative payment technologies.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
+                            All Everpay is a leading global, online payment solutions provider that specializes in innovative payment technologies.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
                         </p>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
         <a href="/legal/cookie-notification">Cookie Notification</a>
 </li>  
   <li class="pl-1 text-center">
-   <a href="https://www.elektropay.io"><span>Powered by</span> <span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png" width="60"> </span> </a>
+   <a href="https://www.elektropay.io"><span>Powered by</span> <span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="60"> </span> </a>
 </li>  
 </ul>                
 </div>
