--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
                     <div class="col">
                         <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png">
                         <span class="clearfix mt-2"></span>
-                        <span class="heading heading-sm c-gray-light strong-400">One platform. Infinite solutions.</span>
+                        <span class="heading heading-sm c-gray-light strong-400">One Company. Infinite solutions.</span>
                         <p class="mt-3">
-                           Everpay is a leading global open payments solutions provider that specializes in integrated and innovative commerce technologies.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
+                           Everpay is a innovative open payments provider that specializes in Fintech technologies and customized commerce solutions. Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
                         </p>
                     </div>
                 </div>
