--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,7 +74,7 @@
                         <ul class="social-media social-media--style-1-v4">
                             <li>
                                 <a href="#" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                    <i class="fa fa-facebook"></i>
+                                 <i data-feather="facebook" id="my-circle" class="facebook" stroke-width="1"></i>                                    <i class="fa fa-facebook"></i>
                                 </a>
                             </li>
                             <li>
