--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                         <span class="clearfix mt-2"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One Company. Infinite solutions.</span>
                         <p class="mt-3">
-                           Everpay is a innovative open payments provider that specializes in Fintech technologies and customized commerce solutions. Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
+                           Everpay is an innovative open payments provider that specializes in Fintech technologies and customized commerce solutions.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
                         </p>
                     </div>
                 </div>
@@ -74,21 +74,21 @@
                         <ul class="social-media social-media--style-1-v4">
                             <li>
                                 <a href="#" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                 <i data-feather="facebook" id="my-circle" class="facebook" stroke-width="1"></i>                                    <i class="fa fa-facebook"></i>
+                                 <i data-feather="facebook" id="my-circle" class="facebook" stroke-width="1"></i>                                    
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="instagram" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
-                                    <i class="fa fa-instagram"></i>
+                                <a href="#" class="twitter" target="_blank" data-toggle="tooltip" data-original-title="Twitter">
+                                    <i class="fa twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Dribbble">
-                                    <i class="fa fa-dribbble"></i>
+                                <a href="#" class="linkedin" target="_blank" data-toggle="tooltip" data-original-title="Linkedin">
+                                    <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Github">
+                                <a href="#" class="github" target="_blank" data-toggle="tooltip" data-original-title="Github">
                                     <i class="fa fa-github"></i>
                                 </a>
                             </li>
