--- a/_includes/header.html
+++ b/_includes/header.html
@@ -334,7 +334,8 @@
                             <li>
                                 <a class="dropdown-item" href="../../documentation/components/badges.html">
                                     Careers
-                                   <span class="badge badge-pill bg-base-2">Hiring</span>                                   </a>
+                                   <span class="badge badge-pill bg-base-2">Hiring</span>                                   
+                             </a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="../../documentation/components/buttons.html">
@@ -509,9 +510,9 @@
             
    <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
      <li class="nav-item">
-      <a href="#" class="nav-link">
-        <i data-feather="phone-call"></i>
-            </a>
+      <a href="#" class="nav-link" target="_blank" data-toggle="tooltip" data-original-title="+18005666003">
+        <i data-feather="phone-call"></i> 1.800.566.6003
+       </a>
      </li>
     </ul>
  
