--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
                              </li>
                              <li>
                                  <a href="{{ site.baseurl }}/press/" title="Press">
-                                     Elektolite Blog
+                                    Press Releases
                                  </a>
                              </li>
                              <li>
@@ -118,7 +118,7 @@
 <ul class="col-lg-5 copyright">               
      <li class="col text-left">
                         Copyright © 2019 
-                        <a href="#" target="_blank">
+                        <a href="javascript:void(0);" class="c-gray-light" target="_blank">
                             <strong>Everpay</strong>
                         </a> - All rights reserved.
       </li>
@@ -140,7 +140,7 @@
         <a href="/legal/cookie-notification">Cookie Notification</a>
 </li>  
   <li class="pl-1 text-center">
-   <a href="https://www.elektropay.io"><span>Powered by</span> <span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="90"> </span> </a>
+   <a href="https://www.elektropay.io"><span>Powered by</span> <span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="120"> </span> </a>
 </li>  
 </ul>                
 </div>
