--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
                                  </a>
                              </li>
                              <li>
-                                 <a href="https://blog.everpayinc.com" title="Blog">
+                                 <a href="https://blog.everpayinc.com/" title="Blog">
                                     Elektolite Blog
                                  </a>
                              </li>
@@ -100,8 +100,8 @@
           {% if site.github_username %}          
                             <li>
                                 <a href="https://github.com/{{ site.github_username }}" class="github" target="_blank" data-toggle="tooltip" data-original-title="Github">
-                                    <i class="fa fa-github"></i>
-                                </a>
+                                <span class="icon  icon--github"> <i data-feather="github" class="c-white" stroke-width="1"></i> </span>                                   
+                              </a>
                             </li>
                          {% endif %}                       
                      </ul>
