--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-top">
         <div class="container container-lg">
             <div class="row cols-xs-space cols-sm-space cols-md-space">
-                <div class="col-lg-5">
+                <div class="col-lg-4">
                     <div class="col">
                         <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png">
                         <span class="clearfix mt-2"></span>
@@ -16,7 +16,23 @@
                 <div class="col-lg-2">
                     <div class="col">
                        <h2 class="heading heading-xs mb-1">
-                           Solutions
+                         Why us
+                       </h2>
+
+                       <ul class="footer-links">
+                            <li><a href="{{ site.baseurl }}/industry-types/" title="Industries">Industries Served</a></li>
+                            <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services & Solutions</a></li>
+                            <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance & Security">Compliance & Security</a></li>
+                            <li><a href="{{ site.baseurl }}/pricing/" title="Transparent Pricing">Transparent Pricing</a></li>
+                            <li><a href="{{ site.baseurl }}/" title="Jobs">FAQ</a></li>
+                        </ul>
+                     </div>
+                </div>
+              
+             <div class="col-lg-2">
+                    <div class="col">
+                       <h2 class="heading heading-xs mb-1">
+                        What we do
                        </h2>
 
                        <ul class="footer-links">
@@ -32,7 +48,7 @@
                 <div class="col-lg-2">
                     <div class="col">
                         <h2 class="heading heading-xs mb-1">
-                            Company
+                            The Company
                         </h2>
 
                         <ul class="footer-links">
@@ -48,12 +64,12 @@
                              </li>
                              <li>
                                  <a href="{{ site.baseurl }}/careers/" title="Careers">
-                                    Careers
-                                 </a>
+                                   Careers <span class="label label-primary">We're hiring!</span>                                 
+                              </a>
                              </li>
                              <li>
-                                 <a href="{{ site.baseurl }}/press/" title="Press">
-                                    Press Releases
+                                 <a href="https://partners.everpayinc.com/" title="Partners">
+                                    Partners
                                  </a>
                              </li>
                              <li>
