--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                         <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png">
                         <span class="clearfix mt-2"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One Company. Infinite solutions.</span>
-                        <p class="mt-3">
+                        <p class="mt-2">
                            Everpay is an innovative open payments provider that specializes in advanced Fintech and customized commerce solutions.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
                         </p>
                     </div>
@@ -16,10 +16,10 @@
                 <div class="col-lg-2">
                     <div class="col">
                        <h2 class="heading heading-xs mb-1">
-                         Why us
+                         Why Us
                        </h2>
 
-                       <ul class="footer-links">
+                       <ul class="footer-links mt-2">
                             <li><a href="{{ site.baseurl }}/industry-types/" title="Industries">Industries Served</a></li>
                             <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services & Solutions</a></li>
                             <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance & Security">Compliance & Security</a></li>
@@ -32,10 +32,10 @@
              <div class="col-lg-2">
                     <div class="col">
                        <h2 class="heading heading-xs mb-1">
-                        What we do
+                        What We Do
                        </h2>
 
-                       <ul class="footer-links">
+                       <ul class="footer-links mt-2">
                             <li><a href="{{ site.baseurl }}/industry-types/" title="Industries">Industries Served</a></li>
                             <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services & Solutions</a></li>
                             <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance & Security">Compliance & Security</a></li>
@@ -51,7 +51,7 @@
                             The Company
                         </h2>
 
-                        <ul class="footer-links">
+                        <ul class="footer-links mt-2">
                              <li>
                                  <a href="{{ site.baseurl }}/about/" title="About">
                                    About us
@@ -87,12 +87,12 @@
                             Get in touch
                         </h2>
 
-                        <ul class="social-media social-media--style-1-v4">
+                        <ul class="social-media social-media--style-1-v4 mt-3">
                          
                           {% if site.facebook_username %}
                             <li>
                                 <a href="https://facebook.com/{{ site.facebook_username }}" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                <span class="icon  icon--facebook mt-3"> <i data-feather="facebook" class="c-white" stroke-width="1"></i> </span>                                   
+                                <span class="icon  icon--facebook"> <i data-feather="facebook mt-3" class="c-white" stroke-width="1"></i> </span>                                   
                                 </a>
                             </li>
           {% endif %}
@@ -100,7 +100,7 @@
          {% if site.twitter_username %}
                             <li>
                                 <a href="https://twitter.com/{{ site.twitter_username }}" class="twitter" target="_blank" data-toggle="tooltip" data-original-title="Twitter">
-        <span class="icon icon--twitter mt-3"> <i data-feather="twitter" class="c-white" stroke-width="1"></i> </span>                                                 
+        <span class="icon icon--twitter"> <i data-feather="twitter" class="c-white mt-3" stroke-width="1"></i> </span>                                                 
                                 </a>
                             </li>
           {% endif %}
@@ -108,7 +108,7 @@
           {% if site.linkedin_username %}
                             <li>
                                 <a href="https://linkedin.com/{{ site.linkedin_username }}" class="linkedin" target="_blank" data-toggle="tooltip" data-original-title="Linkedin">
-                           <span class="icon icon--linkedin mt-3"> <i data-feather="linkedin" class="c-white" stroke-width="1"></i> </span>                                    
+                           <span class="icon icon--linkedin"> <i data-feather="linkedin" class="c-white mt-3" stroke-width="1"></i> </span>                                    
                                 </a>
                             </li>
           {% endif %}
@@ -116,7 +116,7 @@
           {% if site.github_username %}          
                             <li>
                                 <a href="https://github.com/{{ site.github_username }}" class="github" target="_blank" data-toggle="tooltip" data-original-title="Github">
-                                <span class="icon icon--github mt-3"> <i data-feather="github" class="c-white" stroke-width="1"></i> </span>                                   
+                                <span class="icon icon--github"> <i data-feather="github" class="c-white mt-3" stroke-width="1"></i> </span>                                   
                               </a>
                             </li>
                          {% endif %}                       
