--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                         <span class="clearfix mt-2"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One Company. Infinite solutions.</span>
                         <p class="mt-2">
-                           Everpay is an innovative open payments provider that specializes in advanced Fintech and customized commerce solutions.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services and PCI validated Point to Point Encryption solutions.  Everpay also provides merchants and banks with advanced fraud management services including AVS-only, CVV, 3-D Secure™, Facial recognition and industry leading fraud prevention technologies.
+                           Everpay is an innovative open payments provider that specializes in advanced Fintech and customized commerce solutions.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services, PCI validated Point to Point Encryption solutions and other industry leading fraud prevention technologies.
                         </p>
                     </div>
                 </div>
