--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                         <span class="clearfix mt-2"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One Company. Infinite solutions.</span>
                         <p class="mt-2">
-                           Everpay is an innovative open payments provider that specializes in advanced Fintech and customized commerce solutions.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services, PCI validated Point to Point Encryption solutions and other industry leading fraud prevention technologies.
+                           Everpay is an innovative open payments provider that specializes in advanced Fintech and personalized commerce solutions.  Headquartered in Canada, Everpay provides businesses with multi-currency payment solutions, POS devices, tokenization services, PCI validated Point to Point Encryption solutions and other industry leading fraud prevention technologies.
                         </p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                              </li>
                              <li>
                                  <a href="{{ site.baseurl }}/careers/" title="Careers">
-                                Jobs&emsp; <span class="label label-primary">We're hiring!</span>                                 
+                                Jobs&emsp;<span class="label label-primary">We're hiring!</span>                                 
                               </a>
                              </li>
                              <li>
