--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -131,6 +131,7 @@
         <div class="container container-lg">
         
 <div class="row cols-xs-space cols-sm-space cols-md-space">
+ 
 <ul class="col-lg-5 copyright">               
      <li class="col text-left">
                         Copyright © 2019 
@@ -139,24 +140,29 @@
                         </a> - All rights reserved.
       </li>
  </ul>
- <ul class="col-lg-7 col copy-links">     
-     <li class="pl-1 text-left">
-        <a href="/resources/sitemap">Sitemap</a>
-    </li>     
-<li class="pl-1 text-left">
-        <a href="https://status.everpayinc.com/">Status</a>
-    </li> 
-<li class="pl-1 text-left">
-        <a href="/legal/termsofservice">Terms of Use</a>
+ 
+ <ul class="col-lg-7 col copy-links">   
+  
+<li class="pr-2 text-left">
+<a href="{{ site.baseurl }}/legal/termsofservice" target="_blank">Terms of Use</a>
 </li>
-<li class="pl-1 text-left">
-        <a href="/legal/privacypolicy">Privacy Policy</a>
+<li class="pr-2 text-left">
+        <a href="{{ site.baseurl }}/legal/privacypolicy" target="_blank">Privacy Policy</a>
 </li>
-<li class="pl-1 text-left">
-        <a href="/legal/cookie-notification">Cookie Notification</a>
+<li class="pr-2 text-left">
+        <a href="{{ site.baseurl }}/legal/cookie-notification" target="_blank">Cookie Notification</a>
 </li>  
-  <li class="pl-1 text-center">
-   <a href="https://www.elektropay.com"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
+
+<li class="pr-2 text-left">
+<a href="{{ site.baseurl }}/sitemap" target="_blank">Sitemap</a>
+</li>   
+  
+<li class="pr-2 text-left">
+<a href="https://status.everpayinc.com/" target="_blank">Status</a>
+</li> 
+  
+<li class="pr-2 text-center">
+   <a href="https://www.elektropay.com" target="_blank"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
 </li>  
 </ul>                
 </div>
