--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -146,22 +146,22 @@
 <li class="pr-2 text-left">
 <a href="{{ site.baseurl }}/legal/termsofservice" target="_blank">Terms of Use</a>
 </li>
-<li class="pr-2 text-left">
+<li class="pr-3 text-left">
         <a href="{{ site.baseurl }}/legal/privacypolicy" target="_blank">Privacy Policy</a>
 </li>
-<li class="pr-2 text-left">
+<li class="pr-3 text-left">
         <a href="{{ site.baseurl }}/legal/cookie-notification" target="_blank">Cookie Notification</a>
 </li>  
 
-<li class="pr-2 text-left">
+<li class="pr-3 text-left">
 <a href="{{ site.baseurl }}/sitemap" target="_blank">Sitemap</a>
 </li>   
   
-<li class="pr-2 text-left">
+<li class="pr-3 text-left">
 <a href="https://status.everpayinc.com/" target="_blank">Status</a>
 </li> 
   
-<li class="pr-2 text-center">
+<li class="pl-3 text-center">
    <a href="https://www.elektropay.com" target="_blank"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
 </li>  
 </ul>                
