--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -161,7 +161,7 @@
 <a href="https://status.everpayinc.com/" target="_blank">Status</a>
 </li> 
   
-<li class="pl-3 text-center">
+<li class="last pl-1 text-center">
    <a href="https://www.elektropay.com" target="_blank"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
 </li>  
 </ul>                
