--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -132,7 +132,7 @@
         
 <div class="row cols-xs-space cols-sm-space cols-md-space">
  
-<ul class="col-lg-5 copyright">               
+<ul class="col-lg-4 copyright">               
      <li class="col text-left">
                         Copyright © 2019 
                         <a href="javascript:void(0);" class="c-gray-light" target="_blank">
@@ -141,7 +141,7 @@
       </li>
  </ul>
  
- <ul class="col-lg-7 col copy-links">   
+<ul class="col-lg-7 col copy-links ml-3">   
   
 <li class="pr-2 text-left">
 <a href="{{ site.baseurl }}/legal/termsofservice" target="_blank">Terms of Use</a>
