--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -141,7 +141,7 @@
       </li>
  </ul>
  
-<ul class="col-lg-7 col copy-links ml-3">   
+<ul class="col-lg-5 col copy-links ml-3">   
   
 <li class="pr-2 text-left">
 <a href="{{ site.baseurl }}/legal/termsofservice" target="_blank">Terms of Use</a>
@@ -160,8 +160,10 @@
 <li class="pr-3 text-left">
 <a href="https://status.everpayinc.com/" target="_blank">Status</a>
 </li> 
-  
-<li class="last pl-1 text-center">
+ </ul>
+ 
+<ul class="col-lg-2 col copy-links">    
+<li class="last pl-3 text-center">
    <a href="https://www.elektropay.com" target="_blank"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
 </li>  
 </ul>                
