--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -92,7 +92,7 @@
                           {% if site.facebook_username %}
                             <li>
                                 <a href="https://facebook.com/{{ site.facebook_username }}" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                <span class="icon  icon--facebook"> <i data-feather="facebook mt-2" class="c-white" stroke-width="1"></i> </span>                                   
+                                <span class="icon  icon--facebook"> <i data-feather="facebook" class="c-white mt-2 btn-icon" stroke-width="1"></i> </span>                                   
                                 </a>
                             </li>
           {% endif %}
@@ -100,7 +100,7 @@
          {% if site.twitter_username %}
                             <li>
                                 <a href="https://twitter.com/{{ site.twitter_username }}" class="twitter" target="_blank" data-toggle="tooltip" data-original-title="Twitter">
-        <span class="icon icon--twitter"> <i data-feather="twitter" class="c-white mt-2" stroke-width="1"></i> </span>                                                 
+        <span class="icon icon--twitter"> <i data-feather="twitter" class="c-white mt-2 btn-icon" stroke-width="1"></i> </span>                                                 
                                 </a>
                             </li>
           {% endif %}
@@ -108,7 +108,7 @@
           {% if site.linkedin_username %}
                             <li>
                                 <a href="https://linkedin.com/{{ site.linkedin_username }}" class="linkedin" target="_blank" data-toggle="tooltip" data-original-title="Linkedin">
-                           <span class="icon icon--linkedin"> <i data-feather="linkedin" class="c-white mt-2" stroke-width="1"></i> </span>                                    
+                           <span class="icon icon--linkedin"> <i data-feather="linkedin" class="c-white mt-2 btn-icon" stroke-width="1"></i> </span>                                    
                                 </a>
                             </li>
           {% endif %}
@@ -116,7 +116,7 @@
           {% if site.github_username %}          
                             <li>
                                 <a href="https://github.com/{{ site.github_username }}" class="github" target="_blank" data-toggle="tooltip" data-original-title="Github">
-                                <span class="icon icon--github"> <i data-feather="github" class="c-white mt-2" stroke-width="1"></i> </span>                                   
+                                <span class="icon icon--github"> <i data-feather="github" class="c-white mt-2 btn-icon" stroke-width="1"></i> </span>                                   
                               </a>
                             </li>
                          {% endif %}                       
