--- a/_includes/header.html
+++ b/_includes/header.html
@@ -511,7 +511,7 @@
    <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
      <li class="nav-item">
       <a href="#" class="nav-link" target="_blank" data-toggle="tooltip" data-original-title="+18005666003">
-        <i data-feather="phone-call"></i> 1.800.566.6003
+       <span><i data-feather="phone-call" id="phone-circle" class="call-header" stroke-width="1"></i></span><span>1.800.566.6003</span>
        </a>
      </li>
     </ul>
