--- a/_includes/header.html
+++ b/_includes/header.html
@@ -509,7 +509,7 @@
  </ul>
             
    <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
-     <li class="nav-item">
+     <li class="nav-item-icon">
       <a href="#" class="nav-link" target="_blank" data-toggle="tooltip" data-original-title="+18005666003">
        <span><i data-feather="phone-call" id="phone-circle" class="call-header" stroke-width="1"></i></span><span>1.800.566.6003</span>
        </a>
