--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,8 @@
 
                        <ul class="footer-links mt-2">
                             <li><a href="{{ site.baseurl }}/industry-types/" title="Industries">Industries Served</a></li>
-                            <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services & Solutions</a></li>
-                            <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance & Security">Compliance & Security</a></li>
+                            <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services &amp Solutions</a></li>
+                            <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance &amp Security">Compliance &amp Security</a></li>
                             <li><a href="{{ site.baseurl }}/pricing/" title="Transparent Pricing">Transparent Pricing</a></li>
                             <li><a href="{{ site.baseurl }}/" title="Jobs">FAQ</a></li>
                         </ul>
@@ -37,8 +37,8 @@
 
                        <ul class="footer-links mt-2">
                             <li><a href="{{ site.baseurl }}/industry-types/" title="Industries">Industries Served</a></li>
-                            <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services & Solutions</a></li>
-                            <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance & Security">Compliance & Security</a></li>
+                            <li><a href="{{ site.baseurl }}/payment-solutions/" title="Solutions">Services &amp Solutions</a></li>
+                            <li><a href="{{ site.baseurl }}/compliance-security/" title="Compliance &amp Security">Compliance &amp Security</a></li>
                             <li><a href="{{ site.baseurl }}/pricing/" title="Transparent Pricing">Transparent Pricing</a></li>
                             <li><a href="{{ site.baseurl }}/" title="Jobs">FAQ</a></li>
                         </ul>
@@ -64,7 +64,7 @@
                              </li>
                              <li>
                                  <a href="{{ site.baseurl }}/careers/" title="Careers">
-                                Jobs&amp;Careers<span class="label label-primary">We're hiring!</span>                                 
+                                Jobs &amp; Careers <span class="label label-primary">We're hiring!</span>                                 
                               </a>
                              </li>
                              <li>
@@ -151,7 +151,7 @@
       </li>
  </ul>
  
-<ul class="col-lg-5 col copy-links ml-3">   
+<ul class="col-lg-6 col copy-links">   
   
 <li class="pr-2 text-left">
 <a href="{{ site.baseurl }}/legal/termsofservice" target="_blank">Terms of Use</a>
@@ -172,8 +172,8 @@
 </li> 
  </ul>
  
-<ul class="col-lg-2 col copy-links">    
-<li class="last pl-3 text-center">
+<ul class="col-lg-2 col powered-by last">    
+<li class="pl-3 text-center">
    <a href="https://www.elektropay.com" target="_blank"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
 </li>  
 </ul>                
