--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -160,7 +160,7 @@
         <a href="{{ site.baseurl }}/legal/privacypolicy" target="_blank">Privacy Policy</a>
 </li>
 <li class="pr-3 text-left">
-        <a href="{{ site.baseurl }}/legal/cookie-notification" target="_blank">Cookie Notification</a>
+<a href="{{ site.baseurl }}/legal/cookie-notification" target="_blank">Cookie Notification</a>
 </li>  
 
 <li class="pr-3 text-left">
@@ -168,7 +168,7 @@
 </li>   
   
 <li class="pr-3 text-left">
-<a href="https://status.everpayinc.com/" target="_blank">Status</a>
+<a href="https://status.everpayinc.com/" target="_blank" data-status-link-for="everpayapp" title="Visit our status page">Status</a>
 </li> 
  </ul>
  
