--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -172,7 +172,7 @@
 </li> 
  </ul>
  
-<ul class="col-lg-2 col powered-by last">    
+<ul class="col-lg-2 col powered-by-links last">    
 <li class="pl-3 text-center">
    <a href="https://www.elektropay.com" target="_blank"><span>Powered by</span><span><img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/c_thumb,w_200,g_face/v1442882924/logo_qxdkvh.png" width="76"></span></a>
 </li>  
