--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -145,7 +145,7 @@
 <ul class="col-lg-4 copyright">               
      <li class="col text-left">
                         Copyright © 2019 
-                        <a href="javascript:void(0);" class="c-gray-light" target="_blank">
+                        <a href="javascript:void(0);" class="c-white" target="_blank">
                             <strong>Everpay</strong>
                         </a> - All rights reserved.
       </li>
@@ -154,10 +154,10 @@
 <ul class="col-lg-6 col copy-links">   
   
 <li class="pr-2 text-left">
-<a href="{{ site.baseurl }}/legal/termsofservice" target="_blank">Terms of Use</a>
+<a href="{{ site.baseurl }}/legal/terms-of-service" target="_blank">Terms of Use</a>
 </li>
 <li class="pr-3 text-left">
-        <a href="{{ site.baseurl }}/legal/privacypolicy" target="_blank">Privacy Policy</a>
+<a href="{{ site.baseurl }}/legal/privacy-policy" target="_blank">Privacy Policy</a>
 </li>
 <li class="pr-3 text-left">
 <a href="{{ site.baseurl }}/legal/cookie-notification" target="_blank">Cookie Notification</a>
