--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -153,21 +153,21 @@
  
 <ul class="col-lg-6 col copy-links">   
   
-<li class="pr-2 text-left">
+<li class="pr-3 pl-3 text-left">
 <a href="{{ site.baseurl }}/legal/terms-of-service" target="_blank">Terms of Use</a>
 </li>
-<li class="pr-3 text-left">
+<li class="pr-3 pl-3 text-left">
 <a href="{{ site.baseurl }}/legal/privacy-policy" target="_blank">Privacy Policy</a>
 </li>
-<li class="pr-3 text-left">
+<li class="pr-3 pl-3 text-left">
 <a href="{{ site.baseurl }}/legal/cookie-notification" target="_blank">Cookie Notification</a>
 </li>  
 
-<li class="pr-3 text-left">
+<li class="pr-3 pl-3 text-left">
 <a href="{{ site.baseurl }}/sitemap" target="_blank">Sitemap</a>
 </li>   
   
-<li class="pr-3 text-left">
+<li class="pr-3 pl-3 text-left">
 <a href="https://status.everpayinc.com/" target="_blank" data-status-link-for="everpayapp" title="Visit our status page">Status</a>
 </li> 
  </ul>
