--- a/_includes/header.html
+++ b/_includes/header.html
@@ -519,7 +519,7 @@
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
-     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle">
+     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle mr-3">
        Login 
       </a>
  
