--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark ">
+ <nav class="navbar navbar-expand-lg navbar-transparent navbar-inverse bg-dark">
         <div class="container container-lg navbar-container">
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
