--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,10 @@
         <div class="st-pusher">
             <div class="st-content">
                 <div class="st-content-inner">
-                
-                    <div class="header">
 
+  <div id="site-header" class="header site-header everpayTopHeader-processed is-sticky" role="banner" aria-label="Site-Header">
     {% include header.html %}
-
+  </div>
                       
         {{ content }}
   
