--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,8 +35,8 @@
              What we do
             </a>
 
-            <div class="dropdown-menu ml-lg-1">
-                <div id="features-dropdown" class="mega-dropdown-menu col-md-9 col-sm-9 justify-content-around row-fluid row-no-padding" style="width:600px;">
+            <div class="dropdown-menu-sm ml-lg-1">
+                <div id="features-dropdown" class="mega-dropdown-menu features justify-content-around col-sm-12 row-fluid row-no-padding" style="width:600px;">
                  <div class="row">
                                             
                     <div class="col-md-4 col-lg-4">
